--- a/p4/CSS/style.css
+++ b/p4/CSS/style.css
@@ -62,7 +62,8 @@ body{
     background-color: rgb(15, 182, 182);
     display: flex;
     flex-direction: column;
-    height: calc(100vw - 70px);
+    height: 100%;
+    /* height: calc(100vh - 70px); */
     width: 500px;
     align-items: center;
 }
